package br.iwmvi.petshop.funcionario.model;

public enum Cargo {
    VETERINARIO,
    TOSADOR,
    BANHISTA,
    ATENDENTE,
    GERENTE
}
