package br.iwmvi.petshop.historico.model;

public enum TipoEvento {
    VACINACAO,
    CONSULTA,
    PROCEDIMENTO,
    SERVICO,
    OUTRO
}
