-- A tabela criada na V7 nunca foi usada pela aplicação (não havia entidade mapeada),
-- então é recriada com a estrutura do histórico de eventos do pet.
DROP TABLE IF EXISTS historico_pets;

CREATE TABLE historico_pets
(
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    pet_id         BIGINT      NOT NULL,
    funcionario_id BIGINT,
    tipo_evento    VARCHAR(20) NOT NULL,
    descricao      TEXT        NOT NULL,
    data_evento    TIMESTAMP   NOT NULL,
    created_at     TIMESTAMP   NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_historico_pet FOREIGN KEY (pet_id) REFERENCES pets (id) ON DELETE CASCADE,
    -- sem cascata de propósito: funcionário só é excluído logicamente e o histórico é imutável
    CONSTRAINT fk_historico_funcionario FOREIGN KEY (funcionario_id) REFERENCES funcionarios (id),
    CONSTRAINT ck_historico_tipo_evento
        CHECK (tipo_evento IN ('VACINACAO', 'CONSULTA', 'PROCEDIMENTO', 'SERVICO', 'OUTRO'))
);

CREATE INDEX idx_historico_pet ON historico_pets (pet_id);
CREATE INDEX idx_historico_funcionario ON historico_pets (funcionario_id);
