CREATE TABLE IF NOT EXISTS pagamentos
(
    id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    agendamento_id BIGINT NOT NULL,
    valor          DECIMAL(10, 2),
    metodo         VARCHAR(50),
    status         VARCHAR(50),
    data_pagamento TIMESTAMP,

    CONSTRAINT fk_pagamento_agendamento FOREIGN KEY (agendamento_id) REFERENCES agendamentos (id)
);

CREATE INDEX idx_pagamento_agendamento ON pagamentos (agendamento_id)

